# PaliGemma-CXR

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
Classification/: dataset.py  model.py  train_paligemma_cxr.py  utils.py
ObjectDetection/: .gitignore  README.md  create_dataset.py  main.py  metrics.py  model.py  notebook.ipynb  pg_datasets.py  train.py  utils.py
ReportGeneration/: metrics.py  model.py  train.py
Segmentation/: dataset.py  notebook.ipynb  utils.py
SingleTask/Classification/: dataset.py  model.py  train.py  train_paligemma_cxr.py  utils.py
SingleTask/ObjectDetection/: .gitignore  README.md  metrics.py  pg_datasets.py  utils.py
SingleTask/ReportGeneration/: .gitignore  dataset.py
SingleTask/Segmentation/: dataset.py  model.py  notebook.ipynb  train.py  utils.py
SingleTask/VQA/: dataset.py  model.py  train.py  train_paligemma_cxr.py  utils.py
VQA/: dataset.py  model.py  train.py  train_paligemma_cxr.py
