[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PaliGemma-CXR"]

[project]
name = "PaliGemma-CXR"
version = "0.1.0"
authors = [
    { name="Denis Musinguzi", email="musinguzidenis97@gmail.com" },
]
description = "Multitask Multimodal Model for TB Chest X-ray Interpretation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]